--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -15,6 +15,9 @@
         order: 2;
         padding: 40px 20px 20px 20px;
     }
+    img{
+        border-radius: 0.5rem 0.5rem 0 0;
+    }
     .description{
         margin: 30px 0 0 0;
     }
