--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -16,7 +16,10 @@
         padding: 40px 20px 20px 20px;
     }
     img{
-        border-radius: 0.5rem 0.5rem 0 0;
+        border-radius: 1rem 1rem 0 0;
+    }
+    .overlay{
+        border-radius: 1rem 1rem 0 0;
     }
     .description{
         margin: 30px 0 0 0;
