--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -28,6 +28,9 @@
         margin: 30px 0 0 0;
         flex-direction: column;
     }
+    .attribution{
+        font-size: 0.5rem;
+    }
 }
 @media (max-width:450px){
     .container{
