--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -4,7 +4,7 @@
     }
     .container{
         margin: 3rem auto;
-        width: 25rem;
+        width: 27rem;
         position: static;
         transform: none;
     }
@@ -29,13 +29,13 @@
         flex-direction: column;
     }
     .attribution{
-        font-size: 0.5rem;
+        font-size: 1rem;
     }
 }
 @media (max-width:450px){
     .container{
         margin: 3rem auto;
-        width: 15rem;
+        width: 18rem;
         position: static;
         transform: none;
     }
@@ -44,18 +44,27 @@
         padding: 10px;
     }
     .description{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
+        padding: 0 15px 0 15px;
     }
     .heading{
-        font-size: 1rem;
+        font-size: 1.5rem;
+        padding:0 10px 0 10px;
     }
     .popularity{
         flex-direction: column;
+        padding: 0 10px 0 10px;
+    }
+    .popularity div{
+        padding: 5px 0 5px 0 ;
     }
     .num{
         font-size: 1rem;
     }
     .s{
+        font-size: 0.7rem;
+    }
+    .attribution{
         font-size: 0.7rem;
     }
 }
