--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -6,7 +6,8 @@
         max-width: 90%;
     }
     .container{
-        flex-direction: column;
+       margin-top: 3rem;
+       flex-direction: column;
     }
     .content{
         width: 100%;
