--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,20 @@
     padding: 0;
 }
 body{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: hsl(233, 47%, 7%);
     color: white;
     font-family: 'Inter', sans-serif;
 
 }
 main{
-    max-width: 75%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .container{
+    max-width: 75%;
     display: flex;
     background-color: hsl(244, 38%, 16%);
     border-radius: 0.5rem;
